# chemvcs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  CONTRIBUTORS.md  FEATURE_STATUS.md  LICENSE  PROJECT_STATUS.md  README.md  STRUCTURE.md  TODO.md  pyproject.toml  test_demos.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  test.yml
Tutorial/: ChemVCS-Commands.md  Tutorial.md
demo/: GUIDE.md  run_demo.py
demo/vasp_files/step1_initial/: INCAR  KPOINTS  POSCAR  POTCAR
demo/vasp_files/step2_scf_done/: OUTCAR
demo/vasp_files/step3_encut_conv/: INCAR  OUTCAR
demo/vasp_files/step4_kpoint_conv/: INCAR  KPOINTS  OUTCAR
demo_advanced/: .chemvcsignore  GUIDE_ADVANCED.md
demo_advanced/snapshots/: README.md
demo_advanced/snapshots/step1_mof_opt/: INCAR  OUTCAR  POSCAR
demo_advanced/snapshots/step2_add_c2h2/: OUTCAR
demo_advanced/snapshots/step3_vdw_opt/: INCAR  OUTCAR  POSCAR
demo_advanced/snapshots/step4_high_precision/: INCAR  OUTCAR  POTCAR
demo_advanced/vasp_files/: INCAR
demo_lammps/: GUIDE_LAMMPS.md
demo_lammps/lammps_files/step1_initial/: data.lj_fluid
demo_lammps/lammps_files/step2_production/: in.lammps  log.lammps
demo_lammps/lammps_files/step3_npt/: in.lammps
demo_lammps/vasp_files/step1_initial/: in.lammps  log.lammps
demo_lammps/vasp_files/step3_npt/: log.lammps
demo_orca/: GUIDE_ORCA.md
demo_orca/step1_opt/: water.inp  water.out
demo_orca/step2_sp/: water.inp  water.out
docs/: 01-vision-and-scope.md  02-architecture-overview.md  03-object-model-and-storage.md  04-cli-spec-mvp.md  05-remote-protocol-and-server.md  06-python-domain-layer.md  07-hpc-adapter-design.md  08-testing-and-quality.md  09-execution-plan.md  09-hpc-integration-design.md  10-chemvcs-vs-git.md  10-hpc-user-guide.md  11-remote-hpc-design.md  CLI_SPEC.md  MVP_PRD.md  PROJECT_CHARTER.md  PROJECT_DISCOVERY.md  TECH_ARCHITECTURE.md  TEST_PLAN.md  USER_INTERVIEW_SCRIPT.md  chemvcs-dev-plan.md  index.md
examples/hpc-workflow/: README.md  vasp_relax.slurm  vasp_static.slurm  water.xyz  workflow.py
go/: CHANGELOG.md  README.md  go.mod
go/cmd/chemvcs/: main.go
go/cmd/chemvcs-server/: main.go
go/internal/hpc/: hpc.go  hpc_test.go
go/internal/model/: blob.go  model_test.go  object.go  reference.go  snapshot.go  util.go
go/internal/objectstore/: fsck.go  fsck_test.go  gc.go  gc_test.go  pack.go  pack_test.go  store.go  store_test.go
go/internal/remote/: client.go  client_test.go  hpc.go  operations.go
go/internal/repo/: merge.go  merge_test.go  refs.go  repository.go  repository_test.go
go/internal/server/: handlers.go  hpc_handlers.go  server.go  server_test.go
go/internal/workspace/: cleanup_test.go  diff.go  diff_test.go  scanner.go  scanner_test.go
plugins/: test_plugin_demo.py
plugins/chemvcs-validator/: README.md  pyproject.toml
plugins/chemvcs-validator/src/chemvcs_validator/: __init__.py  file_format.py  incar_poscar.py  poscar_potcar.py
python/: README.md  requirements-dev.txt  requirements.txt  setup.py
python/chemvcs_py/: __init__.py
python/chemvcs_py/core/: __init__.py  objects.py  repo.py
python/chemvcs_py/domain/: __init__.py  run.py  structure.py  workflow.py
python/chemvcs_py/hpc/: __init__.py  adapter.py  exceptions.py  lsf_adapter.py  monitoring.py  pbs_adapter.py  provenance.py  retrieval.py  slurm_adapter.py  submission.py  tracking.py
python/chemvcs_py/io/: __init__.py  poscar.py  xyz.py
python/chemvcs_py/util/: __init__.py  errors.py
python/examples/: basic_usage.py  run_workflow_example.py
python/tests/: __init__.py  conftest.py  test_lsf_adapter.py  test_pbs_adapter.py  test_poscar.py  test_provenance.py  test_run.py  test_slurm_adapter.py  test_structure.py  test_workflow.py  test_xyz.py
src/chemvcs/: __init__.py  constants.py  py.typed
src/chemvcs/cli/: __init__.py  main.py
src/chemvcs/core/: __init__.py  staging.py
src/chemvcs/parsers/: __init__.py  base_parser.py  diff_engine.py  incar_parser.py  kpoints_parser.py  lammps_data_parser.py  lammps_input_parser.py  lammps_log_parser.py  orca_input_parser.py  (+2 more)
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: test_commit.py  test_diff_command.py  test_lammps_workflow.py  test_log.py  test_reproduce.py  test_semantic_diff.py  test_status.py
tests/unit/: test_base_parser_extra.py  test_diff_engine.py  test_diff_engine_lammps.py  test_incar_parser.py  test_kpoints_parser.py  test_kpoints_parser_extra.py  test_lammps_data_parser.py  test_lammps_input_parser.py  test_lammps_input_parser_extra.py  test_lammps_log_parser.py  test_lammps_log_parser_extra.py  test_orca_input_parser.py  test_orca_output_parser.py  test_outcar_parser.py  test_outcar_parser_extra.py  test_plugins_extra.py  test_validators.py
(+21 files in other folders)
